--- a/src/components/business/HomePage/Footer/Footer.module.css
+++ b/src/components/business/HomePage/Footer/Footer.module.css
@@ -3,6 +3,7 @@
   color: var(--white);
   background-color: var(--black);
   font-size: 2rem;
+  overflow: hidden;
 }
 
 .container {
